--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "dependencies": {
     "axios": "^0.21.2",
     "core-js": "^3.4.3",
+    "element-ui": "^2.15.13",
+    "moment": "^2.29.4",
     "view-design": "^4.0.2",
     "vue": "^2.6.10",
+    "vue-hot-reload-api": "^2.3.4",
+    "vue-loader": "^17.1.0",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.2"
   },
@@ -19,6 +23,7 @@
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
+    "http-proxy-middleware": "^2.0.6",
     "vue-template-compiler": "^2.6.10"
   }
 }
